# mddiff

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.ja.md  README.md  package-lock.json  package.json
.github/workflows/: build.yml
crates/mddiff-core/: Cargo.toml
crates/mddiff-core/src/: git.rs  history.rs  lib.rs  pack.rs
crates/mddiff-tui/: Cargo.toml
crates/mddiff-tui/src/: app.rs  main.rs  picker.rs
crates/mddiff-tui/src/views/: diff.rs
crates/mdv-core/src/: fs.rs  git.rs  lib.rs
crates/mdv-tui/: Cargo.toml
crates/mdv-tui/src/: app.rs  main.rs  markdown.rs  picker.rs
crates/mdv-tui/src/views/: diff.rs  mod.rs  preview.rs  source.rs
docs/: competitive-analysis.md  decisions.md  design.md  issues.md  mddiff-protocol.md  mdv-protocol.md  refactor-audit.md  roadmap.md  tooling-research.md
docs/img/: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  menu.rs
src-tauri/src/commands/: diff.rs  fs.rs  git.rs  history.rs  mddiff.rs  mod.rs
src/lib/: errors.ts  export.ts  sample.ts  shims.d.ts  types.ts
src/lib/components/: FindBar.svelte  HistoryBanner.svelte  LargeFileWarning.svelte  MddiffExportDialog.svelte  MdvExportDialog.svelte  ModeBar.svelte  OutlineSidebar.svelte  SettingsDialog.svelte
src/lib/i18n/: en.ts  index.svelte.ts  ja.ts
src/lib/ipc/: fs.ts  git.ts  history.ts  mddiff.ts
src/lib/stores/: doc.svelte.ts  settings.svelte.ts
src/lib/views/: DiffView.svelte  LivePreviewView.svelte  PreviewView.svelte  SourceView.svelte  WysiwygView.svelte  cm-syntax.ts  cm-theme.ts  find-cm.svelte.ts  find-dom.ts  image-path.ts  link-click-cm.ts  livepreview.ts  markdown-render.ts  outline.ts  scroll-tracker.ts  use-find.svelte.ts  wysiwyg-spellcheck-mask.ts
src/lib/views/diff/: FullDiffView.svelte  HighlightView.svelte  line-map.ts  (+1 more)
src/routes/: +page.svelte
