[package]
name = "mdv"
version = "0.1.0"
description = "Lightweight cross-platform Markdown viewer and editor"
authors = ["ebi-oishii"]
edition = "2021"

[lib]
name = "mdv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

similar = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
git2 = { version = "0.19", default-features = false }
