[package]
name = "mddiff-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Terminal UI for mddiff."

[[bin]]
name = "mddiff-tui"
path = "src/main.rs"

[dependencies]
mddiff-core = { path = "../mddiff-core" }
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
tui-textarea = "0.7"
pulldown-cmark = { version = "0.12", default-features = false }
